--- a/starter-kits/tailwind/source/default/patterns/01-atoms/logo/logo.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/logo/logo.twig
@@ -8,6 +8,6 @@
 #}
 
 {# TEMPLATE #}
-<a class="lg:pr-8 block" href="{{ path('<front>') }}">
-  <img src="{{ file_url('ws-assets://images/logo.svg') }}" alt="Brand Logo" class="w-full max-w-7xl">
+<a class="block" href="{{ path('<front>') }}">
+  <img src="{{ file_url('ws-assets://images/logo.svg') }}" alt="Brand Logo">
 </a>
