style(footer): use logo pattern function

--- a/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.twig
@@ -10,7 +10,7 @@
   } only %}
     {% block column_1 %}
       <div class="w-44">
-        {% include "@atoms/logo/logo.twig" only %}
+        {{ pattern('logo') }}
       </div>
       <div class="text-purple-300 mt-3">
         Lorem ipsum dolor sit amet consectetur. Mollis elit enim auctor.
