--- a/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.twig
@@ -9,23 +9,24 @@
 
 {# TEMPLATE #}
 
-<section class="text-gray-700 body-font">
-  <div class="flex md:flex-row flex-col">
-
-    <div class="flex flex-col pt-8 items-center text-center md:w-1/2 md:pr-16 md:items-start md:text-left mb-16 md:mb-0 lg:flex-grow lg:pr-24">
-      <div{{ region_attributes.pre_headline|default(create_attribute()).addClass('dark:text-gray-100 uppercase tracking-loose font-medium w-full mb-4') }}>{{ pre_headline }}</div>
-      {% include "@molecules/rich-snippet/rich-snippet.twig" with {
-        headline: headline,
-        headline_tag: 'h1',
-        text: text
-      } only %}
-      <div class="flex justify-center">
-        <div{{ region_attributes.button|default(create_attribute()).addClass('mr-5') }}>{{ button }}</div>
+<section class="">
+  {% set cell_left %}
+    <div class="flex flex-col relative" style="">
+      <div class="{{ reverse == '1' ? 'absolute  w-[435px] h-[434px] left-0 transform -rotate-[135deg] top-[-90px] lg:top-0 lg:w-[543px] lg:h-[542px] bg-gradient-to-b to-transparent from-[#00C2FF] filter blur-[70px] transform -rotate-[135deg] opacity-20':'absolute w-[435px] h-[434px] left-0 transform -rotate-[135deg] lg:rotate-0 lg:left-[232px] top-[-90px] lg:top-[73px] bg-gradient-to-b to-transparent from-[#00C2FF] filter blur-[70px] opacity-20' }}"></div>
+      <div
+        class="{{ reverse == '1' ? 'absolute w-[435px] h-[434px] left-0 transform -rotate-[135deg] top-[-90px] lg:top-0 lg:w-[543px] lg:h-[542px] bg-gradient-to-b from-transparent to-pink-500 filter blur-[70px] transform -rotate-[135deg] opacity-70' : 'absolute w-[435px] h-[434px] left-0 transform -rotate-[135deg] lg:rotate-0 lg:left-[232px] top-[-90px] lg:top-[73px] bg-gradient-to-t from-pink-500 to-transparent filter blur-[70px] opacity-70' }} "></div>
+      <div class="relative z-20">
+        <img src="{{ file_url('ws-assets://images/hero.png') }}" alt="">
+        {#        {{ image }} #}
       </div>
+      <div
+        class="{{ reverse == '1' ? 'absolute w-[209px] h-[296px] top-[-190px] right-0 lg:w-[261px] lg:h-[370px] lg:right-0 lg:top-0 bg-gradient-to-b from-transparent to-blue-700 opacity-70 filter blur-[70px] transform -rotate-[135deg]' : 'absolute w-[209px] h-[296px] transform -rotate-[135deg] lg:rotate-0 top-[-190px] right-0 lg:right-auto lg:left-[345px] lg:top-[274px] bg-gradient-to-b from-transparent to-blue-700 opacity-70 filter blur-[70px]' }}"></div>
     </div>
-
-    <div {{ region_attributes.image|default(create_attribute()).addClass('w-5/6 md:w-1/2 lg:max-w-lg lg:w-full') }}>
-      {{ image }}
+  {% endset %}
+  {% set cell_right %}
+    <div class="flex flex-1 items-center">
+      {{ pattern('rich_snippet', {preheadline: preheadline, headline: headline, text: text, action: action,}, 'default', {size: 'default'} ) }}
     </div>
-  </div>
+  {% endset %}
+  {{ pattern('grid', {cells: [cell_left, cell_right], reverse: reverse, flip_mobile: true, vertical_center: true, columns: '2', gutter: 'default' }, null ) }}
 </section>
