--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/_menu--footer.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/_menu--footer.twig
@@ -1,58 +1,49 @@
-{% set menu_level = 0 %}
+{% set cells = [] %}
 
-{% import _self as menus %}
+{% set class_names = [
+  'parent_list',
+  'parent_link',
+  'child_list',
+  'child_link'
+] %}
 
-{% macro menu(items, menu_level) %}
-  {% import _self as menus %}
+{% set classes = {} %}
+{% for class_name in class_names %}
+  {% set class = pattern_configuration('menu', variant, class_name) %}
+  {% if class %}
+    {% set classes = classes|merge({(class_name ~ '_classes'): class}) %}
+  {% endif %}
+{% endfor %}
 
-  {% set link_classes = ([
-    'text-green-700 pb-2 dark:text-white',
-    menu_level == 1 ? 'text-green-700 w-full',
-  ] | sort | join(' ') | trim ) %}
-    <div>
-      {% set row_numbers = items|length/2 %}
-      {% for row in items|batch(menu_level == 2 ? row_numbers : 100) %}
-        <ul>
-          {% for item in row %}
-            <li>
-              <div class="{{ link_classes }}">
-                <a href="{{ item.url }}" class="flex-1">
-                  {{ item.title }}
+{% for item in items %}
+  {% set cell %}
+    <ul role="menu" {{ classes.parent_list_classes is not empty ? "class=#{classes.parent_list_classes}" }}>
+      <li role="none">
+
+        {# -- Main parent item w/o link  -- #}
+        <a href="#" {{ classes.parent_link_classes is not empty ? "class='#{classes.parent_link_classes}'" }}>
+          {{ item.title }}
+        </a>
+
+        {# -- Child items -- #}
+        {% if item.below %}
+          <ul role="menu" {{ classes.child_list_classes is not empty ? "class='#{classes.child_list_classes}'" }}>
+            {% for child in item.below %}
+              <li role="none">
+                <a href="{{ child.url }}" {{ classes.child_link_classes is not empty ? "class='#{classes.child_link_classes}'" }}>
+                  {{ child.title }}
                 </a>
-              </div>
-              {% if item.below %}
-                {{ menus.menu(item.below, menu_level + 1) }}
-              {% endif %}
-            </li>
-          {% endfor %}
-        </ul>
-      {% endfor %}
-    </div>
-{% endmacro %}
+              </li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      </li>
+    </ul>
+  {% endset %}
 
-{% set list_classes = ([
-  'lg:flex justify-between'
-] | sort | join(' ') | trim ) %}
+  {% set cells = cells|merge([cell]) %}
+{% endfor %}
 
-<ul class="{{ list_classes }}">
-  {% for item in items %}
-    {% set title_classes = ([
-      'flex flex-col justify-center text-green-700 text-lg font-bold dark:text-white pb-2 w-full '
-    ] | sort | join(' ') | trim ) %}
-    <li data-menu-target="submenu" data-menu-level="{{ menu_level }}"  class="flex-1">
-      <div class="flex flex-col justify-center pt-4 lg:pt-0">
-        <div class="{{ title_classes }}">
-          <div>
-            {{ item.title }}
-          </div>
-        </div>
-      </div>
-      {% if item.below %}
-        {{ menus.menu(item.below, menu_level + 1) }}
-      {% endif %}
-    </li>
-  {% endfor %}
-</ul>
-
-
-
+<nav aria-label="footer">
+  {{ pattern('grid', {cells:cells, columns: cells|length, gutter: 'default' }, null ) }}
+</nav>
