refactor(footer): refactor footer classes logic

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/_menu--footer.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/_menu--footer.twig
@@ -1,20 +1,12 @@
 {#
 Classes
 #}
-{% set class_names = [
-  'parent_list',
-  'parent_link',
-  'child_list',
-  'child_link'
-] %}
-
-{% set classes = {} %}
-{% for class_name in class_names %}
-  {% set class = pattern_configuration('menu', variant, class_name) %}
-  {% if class %}
-    {% set classes = classes|merge({(class_name ~ '_classes'): class}) %}
-  {% endif %}
-{% endfor %}
+{% set parent_list_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'parent_list_classes')) %}
+{% set parent_list_item_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'parent_list_item_classes')) %}
+{% set parent_link_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'parent_link_classes')) %}
+{% set child_list_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'child_list_classes')) %}
+{% set child_list_item_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'child_list_item_classes')) %}
+{% set child_link_attributes = create_attribute().addClass(pattern_configuration('menu', variant, 'child_link_classes')) %}
 
 {#
 Template
@@ -22,20 +14,20 @@ Template
 {% set cells = [] %}
 {% for item in items %}
   {% set cell %}
-    <ul role="menu" {{ classes.parent_list_classes is not empty ? "class=#{classes.parent_list_classes}" }}>
-      <li role="none">
+    <ul role="menu" {{ parent_list_attributes }}>
+      <li role="none" {{ parent_list_item_attributes }}>
 
         {# -- Main parent item w/o link  -- #}
-        <a href="#" {{ classes.parent_link_classes is not empty ? "class='#{classes.parent_link_classes}'" }}>
+        <a href="#" {{ parent_link_attributes }}>
           {{ item.title }}
         </a>
 
         {# -- Child items -- #}
         {% if item.below %}
-          <ul role="menu" {{ classes.child_list_classes is not empty ? "class='#{classes.child_list_classes}'" }}>
+          <ul role="menu" {{ child_list_attributes }}>
             {% for child in item.below %}
-              <li role="none">
-                <a href="{{ child.url }}" {{ classes.child_link_classes is not empty ? "class='#{classes.child_link_classes}'" }}>
+              <li role="none" {{ child_list_item_attributes }}>
+                <a href="{{ child.url }}" {{ child_link_attributes }}>
                   {{ child.title }}
                 </a>
               </li>
