--- a/starter-kits/tailwind/source/default/patterns/01-atoms/hamburger/hamburger.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/hamburger/hamburger.twig
@@ -1,8 +1,30 @@
-<button class="text-gray-500 w-8 h-8 relative focus:outline-none" @click="menuIsOpen = !menuIsOpen">
-  <span class="sr-only">Open main menu</span>
-  <div class="block w-5 absolute left-1/2 top-1/2   transform  -translate-x-1/2 -translate-y-1/2">
-    <span aria-hidden="true" class="{{ pattern_configuration('hamburger', '', 'defaults')['base_classes'] }}" :class="{'rotate-45': menuIsOpen,' -translate-y-1.5': !menuIsOpen }"></span>
-    <span aria-hidden="true" class="{{ pattern_configuration('hamburger', '', 'defaults')['base_classes'] }}" :class="{'opacity-0': menuIsOpen } "></span>
-    <span aria-hidden="true" class="{{ pattern_configuration('hamburger', '', 'defaults')['base_classes'] }}" :class="{'-rotate-45': menuIsOpen, ' translate-y-1.5': !menuIsOpen}"></span>
+{#
+Defaults
+#}
+{% set attributes = attributes|default(create_attribute()) %}
+{% set size = size|default('default') %}
+{% set active_behaviour = active_behaviour|default('squeeze') %}
+{% set color = color_classes|default('bg-black') %}
+
+{#
+Classes
+#}
+{% set classes = [
+  'tham',
+  pattern_configuration('hamburger', '', 'size')[size],
+  pattern_configuration('hamburger', '', 'active_behaviour')[active_behaviour],
+] %}
+
+{% set color_classes = [
+  'tham-inner',
+  color_classes
+]| sort | join(' ') | trim %}
+
+{#
+Template
+#}
+<div {{ attributes.addClass(classes | sort | join(' ') | trim) }} @click="menuIsOpen = !menuIsOpen" :class="{ 'tham-active': menuIsOpen }">
+  <div class="tham-box">
+    <div class="{{ color_classes }}"></div>
   </div>
-</button>
+</div>
