--- a/starter-kits/tailwind/source/default/patterns/01-atoms/hamburger/hamburger.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/hamburger/hamburger.twig
@@ -1,30 +1,30 @@
 {#
-Defaults
+  Defaults
 #}
 {% set attributes = attributes|default(create_attribute()) %}
+{% set inner_attributes = create_attribute() %}
 {% set size = size|default('default') %}
 {% set active_behaviour = active_behaviour|default('squeeze') %}
-{% set color = color_classes|default('bg-black') %}
 
 {#
-Classes
+  Attributes
 #}
-{% set classes = [
+{% set attributes = attributes.addClass([
   'tham',
   pattern_configuration('hamburger', '', 'size')[size],
   pattern_configuration('hamburger', '', 'active_behaviour')[active_behaviour],
-] %}
+]|sort |join(' ')| trim) %}
 
-{% set color_classes = [
+{% set inner_attributes = inner_attributes.addClass([
   'tham-inner',
-  color_classes
-]| sort | join(' ') | trim %}
+  pattern_configuration('hamburger', '', 'color'),
+]|sort |join(' ')| trim) %}
 
 {#
 Template
 #}
-<div {{ attributes.addClass(classes | sort | join(' ') | trim) }} @click="menuIsOpen = !menuIsOpen" :class="{ 'tham-active': menuIsOpen }">
+<div {{ attributes }} @click="menuIsOpen = !menuIsOpen" :class="{ 'tham-active': menuIsOpen }">
   <div class="tham-box">
-    <div class="{{ color_classes }}"></div>
+    <div {{ inner_attributes }}></div>
   </div>
 </div>
