fix: Fix default value handling

--- a/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.twig
@@ -6,7 +6,7 @@
  * See component.wingsuit.yml for usage.
  */
 #}
-{# SETTINGS #}
+{# Defaults #}
 {% set columns = columns|default(2) %}
 {% set columns_width = columns_width|default('equal') %}
 
